# akamai-cloud-mcp

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  server.json
.github/workflows/: ci.yml  pricing-staleness.yml  publish.yml
evals/: README.md  run_evals.py  tasks.json
scripts/: check_staleness.py  pricing_baseline.json
src/akamai_cloud_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  context.py  errors.py  pricing_supplement.py  scrub.py  serialize.py  server.py  staleness.py
src/akamai_cloud_mcp/data/: __init__.py  pricing_supplement.json
src/akamai_cloud_mcp/domains/: __init__.py  _helpers.py  account_billing.py  compute.py  databases.py  dns.py  escape_hatch.py  lke.py  networking.py  object_storage.py  pricing.py  regions_catalog.py
tests/: conftest.py  test_account_billing.py  test_compute.py  test_databases.py  test_dns.py  test_escape_hatch.py  test_gpu_availability.py  test_lke.py  test_networking.py  test_object_storage.py  test_pagination.py  test_pricing_estimate.py  test_readonly_guard.py  test_regions_pricing.py  test_scrub.py  test_server.py  test_transports.py
