[project]
name = "akamai-cloud-mcp"
version = "0.1.0"
description = "Read-only Model Context Protocol server for Akamai Cloud (Linode): inventory, pricing, and account limits."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Du'An Lightfoot", email = "dlightfo@akamai.com" }]
maintainers = [{ name = "Akamai Developer Relations", email = "dlightfo@akamai.com" }]
keywords = ["akamai", "linode", "mcp", "model-context-protocol", "fastmcp", "cloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.8",
    "linode-api4>=5.0",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.urls]
Homepage = "https://github.com/akamai-developers/akamai-cloud-mcp"
Repository = "https://github.com/akamai-developers/akamai-cloud-mcp"
Issues = "https://github.com/akamai-developers/akamai-cloud-mcp/issues"
Changelog = "https://github.com/akamai-developers/akamai-cloud-mcp/blob/main/CHANGELOG.md"

[project.scripts]
akamai-cloud-mcp = "akamai_cloud_mcp.server:run"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akamai_cloud_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
packages = ["akamai_cloud_mcp"]
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = false
ignore_missing_imports = true
